[package]
name = "php-skywalking-agent"
version = "0.1.0"
authors = ["jmjoy <918734043@qq.com>"]
description = "Non intrusive PHP skywalking agent, written in Rust."
edition = "2021"
rust-version = "1.58"
repository = "https://github.com/jmjoy/php-skywalking-agent"
license = "MulanPSL-2.0"
readme = "README.md"
publish = false

[lib]
name = "skywalking_agent"
crate-type = ["cdylib"]

[[bin]]
name = "skywalking_agent"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.57"
ipc-channel = "0.16.0"
once_cell = "1.12.0"
phper = "0.4.0-alpha.1"
skywalking_rust = { git = "https://github.com/jmjoy/skywalking-rust.git" }
tokio = { version = "1.18.2", features = ["full"] }
tonic = "0.7.2"
tracing = { version = "0.1.34", features = ["log"] }
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.11"

[patch.crates-io]
phper = { git = 'https://github.com/jmjoy/phper', branch = '0.4.x-dev' }
