[package]
name = "php-skywalking-agent"
version = "0.1.0"
authors = ["jmjoy <918734043@qq.com>"]
description = "Non intrusive PHP skywalking agent, written in Rust."
edition = "2021"
rust-version = "1.58"
repository = "https://github.com/jmjoy/php-skywalking-agent"
license = "MulanPSL-2.0"
readme = "README.md"
publish = false

[lib]
name = "skywalking_agent"
crate-type = ["cdylib"]

[[bin]]
name = "skywalking_agent"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
dashmap = "5.3.4"
hostname = "0.3.1"
ipc-channel = "0.16.0"
once_cell = "1.12.0"
phper = "0.4.0-alpha.2"
prost = "0.10.4"
skywalking_rust = { git = "https://github.com/jmjoy/skywalking-rust.git", branch = "hack" }
systemstat = "0.1.11"
tokio = { version = "1.18.2", features = ["full"] }
tokio-stream = "0.1.8"
tonic = "0.7.2"
tracing = { version = "0.1.34", features = ["attributes"] }
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.11"
url = "2.2.2"

# [patch.crates-io]
# phper = { git = 'https://github.com/jmjoy/phper', branch = '0.4.x-dev' }
