[package]
name = "php-skywalking-agent"
version = "0.1.0"
authors = ["jmjoy <918734043@qq.com>"]
description = "Non intrusive PHP skywalking agent, written in Rust."
edition = "2021"
rust-version = "1.58"
repository = "https://github.com/jmjoy/php-skywalking-agent"
license = "MulanPSL-2.0"
readme = "README.md"
publish = false

[lib]
name = "skywalking_agent"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "skywalking_agent"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
dashmap = "5.3.4"
helper = "3.2.0"
hostname = "0.3.1"
ipc-channel = "0.16.0"
once_cell = "1.13.0"
phper = { git = "https://github.com/jmjoy/phper.git", branch = "master" }
prost = "0.10.4"
skywalking = { git = "https://github.com/apache/skywalking-rust.git", branch = "master" }
systemstat = "0.1.11"
tokio = { version = "1.20.0", features = ["full"] }
tokio-stream = "0.1.9"
tonic = "0.7.2"
tracing = { version = "0.1.35", features = ["attributes"] }
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.14"
url = "2.2.2"
